# pycounts_cg

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  readthedocs.yaml
.github/workflows/: ci-cd.yml  main.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/pycounts_cg/: __init__.py  pycounts_cg.py
tests/: test_pycounts_cg.py
